<resources>
    <string name="app_name">异书房</string>
    <string name="bookshelf">书架</string>
    <string name="last_read">最后阅读</string>
    <string name="read_summary">让阅读成为一种习惯。</string>
    <string name="update_log">更新日志</string>
    <string name="receiving_shared_label">阅读·搜索</string>
    <string name="bookshelf_empty">书架还空着，先去添加吧！</string>
    <string name="action_search">搜索</string>
    <string name="action_download_task">下载任务</string>
    <string name="action_download">下载</string>
    <string name="action_close">下载</string>
    <string name="bookshelf_layout">书架布局</string>
    <string name="book_library">书城</string>
    <string name="book_local">添加本地</string>
    <string name="book_source_manage">书源管理</string>
    <string name="book_source">书源</string>
    <string name="read_records">今日阅读:%s</string>
    <string name="type_un_correct">格式不对</string>
    <string name="network_unusable">似乎没有网络哦</string>
    <string name="common_web_ssl_error">当前网站安全证书已过期或不可信\n是否继续浏览</string>
    <string name="common_web_ssl_error_allow">继续浏览</string>
    <string name="common_web_ssl_error_reject">返回上一页</string>
    <string name="setting">设置</string>
    <string name="theme_setting">主题设置</string>
    <string name="about">关于</string>
    <string name="donate">捐赠</string>
    <string name="exit">退出</string>
    <string name="exit_no_save">还未保存,是否继续编辑</string>
    <string name="read_style">阅读样式设置</string>
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_setting">去设置</string>
    <string name="tip_cannot_jump_setting_page">无法跳转至设置界面</string>
    <string name="local">本地</string>
    <string name="net_no_group">网络未分组</string>
    <string name="local_no_group">本地未分组</string>
    <string name="select_restore_file">选择恢复文件</string>
    <string name="search">搜索</string>
    <string name="net_error_10001">没有网络</string>
    <string name="net_error_10002">网络连接超时</string>
    <string name="net_error_10003">数据解析失败</string>
    <string name="origin_format">来源: %s</string>
    <string name="read_dur_progress">最近: %s</string>
    <string name="book_name">书名</string>
    <string name="book_search_last">最新: %s</string>
    <string name="check_add_bookshelf">是否将《%s》放入书架？</string>
    <string name="import_books_count">共%s个Text文件</string>
    <string name="get_data_error">获取数据失败！</string>
    <string name="retry">重试</string>
    <string name="web_service">web服务</string>
    <string name="web_edit_source">web编辑书源</string>
    <string name="http_ip">http://%s:%d</string>
    <string name="download_offline">离线下载</string>
    <string name="download_offline_t">离线下载</string>
    <string name="download_offline_s">下载选择的章节到本地</string>
    <string name="change_origin">换源</string>
    <string name="about_description">\u3000\u3000这是一款开源的阅读软件，你可以fork我们的代码自己编译APK。欢迎提交代码帮助改善应用。\n\u3000\u3000公众号[开源阅读软件]！</string>
    <string name="version_name">Version %s</string>
    <string name="pt_auto_refresh">自动刷新</string>
    <string name="ps_auto_refresh">打开软件时自动更新书籍</string>
    <string name="pt_auto_download">自动下载最新章节</string>
    <string name="ps_auto_download">更新书籍时自动下载最新章节</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="backup_permission">备份请给与存储权限</string>
    <string name="backup_restore">备份与云备份</string>
    <string name="database">查看数据库</string>
    <string name="web_dav_address">WebDAV网址</string>
    <string name="web_dav_account">WebDAV账号</string>
    <string name="web_dav_password">WebDAV密码</string>
    <string name="web_dav_backup_net">云备份网络</string>
    <string name="web_dav_backup_local">立即备份到本地存储空间</string>
    <string name="web_dav_backup_to_web">立即备份到云端网盘</string>
    <string name="web_dav_backup_help">坚果云授权教程</string>
    <string name="restore_permission">恢复请给与存储权限</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="backup_confirmation">确认备份吗？</string>
    <string name="backup_message">新备份会替换原有备份。\n备份文件夹YiShuFang/backups</string>
    <string name="restore_confirmation">确认恢复吗？</string>
    <string name="restore_message">恢复书架会覆盖现有书架。</string>
    <string name="backup_success">备份成功</string>
    <string name="backup_fail">备份失败</string>
    <string name="on_restore">正在恢复</string>
    <string name="restore_success">恢复成功</string>
    <string name="restore_fail">恢复失败</string>
    <string name="screen_direction">屏幕方向</string>
    <string name="screen_sensor">跟随传感器</string>
    <string name="screen_landscape">横向</string>
    <string name="screen_portrait">竖向</string>
    <string name="screen_unspecified">跟随系统</string>
    <string name="disclaimer">免责声明</string>
    <string name="all_chapter_num">共%d章</string>
    <string name="interface_setting">界面</string>
    <string name="brightness">亮度</string>
    <string name="chapter_list">目录</string>
    <string name="next_chapter">下一章</string>
    <string name="previous_chapter">上一章</string>
    <string name="pt_hide_status_bar">隐藏状态栏</string>
    <string name="ps_hide_status_bar">阅读界面隐藏状态栏</string>
    <string name="pt_read_line_adjust">阅读行数调整</string>
    <string name="ps_read_line_adjust">阅读行数减一行,如阅读界面显示不全可启用</string>
    <string name="read_aloud">朗读</string>
    <string name="read_aloud_t">正在朗读</string>
    <string name="read_aloud_s">点击打开阅读界面</string>
    <string name="text_return">返回</string>
    <string name="refresh">重新加载</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="set_timer">定时</string>
    <string name="read_aloud_pause">朗读暂停</string>
    <string name="read_aloud_timer">正在朗读(还剩%d分钟)</string>
    <string name="ps_hide_navigation_bar">阅读界面隐藏虚拟按键</string>
    <string name="pt_hide_navigation_bar">隐藏导航栏</string>
    <string name="re_navigation_bar_color">导航栏颜色</string>
    <string name="git_hub">GitHub</string>
    <string name="scoring">评分</string>
    <string name="send_mail">发送邮件</string>
    <string name="can_not_open">无法打开</string>
    <string name="no_chapter">无章节</string>
    <string name="add_url">添加网址</string>
    <string name="add_book_url">添加书籍网址</string>
    <string name="background">背景</string>
    <string name="author">作者</string>
    <string name="analyze_error">站点暂时不支持解析，请反馈</string>
    <string name="aloud_stop">朗读停止</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_des">清除已缓存章节,书封面,已下载字体等缓存文件</string>
    <string name="set_file_path">文件路径</string>
    <string name="action_save">保存</string>
    <string name="edit_book_source">编辑书源</string>
    <string name="disable_book_source">禁用书源</string>
    <string name="fast_import_book_srouce">一键导入</string>
    <string name="add_book_source">新建书源</string>
    <string name="book_file_selector">添加书籍</string>
    <string name="scan_book_source">扫描</string>
    <string name="copy_source">拷贝书源</string>
    <string name="copy_source_no_find">拷贝书源无发现</string>
    <string name="paste_source">粘贴书源</string>
    <string name="source_rule_s">书源规则说明</string>
    <string name="check_update">检查更新</string>
    <string name="camera_scan">扫描二维码</string>
    <string name="scan_image">扫描本地图片</string>
    <string name="rule_summary">规则说明</string>
    <string name="share">分享</string>
    <string name="share_app">软件分享</string>
    <string name="flow_sys">跟随系统</string>
    <string name="add">添加</string>
    <string name="import_book_source">导入书源</string>
    <string name="import_book_source_local">本机导入</string>
    <string name="import_book_source_on_line">网络导入</string>
    <string name="input_book_source_url_success">成功导入%1$d个书源</string>
    <string name="no_book_source_tips">暂无书源,搜索微信公众号:异书房,\n回复"书源"获取书源~</string>
    <string name="delete_selected_book_source">您共选中%1$d个书源,是否删除?</string>
    <string name="please_choose_book_source">请选择书源~</string>
    <string name="no_book_source_selected">没有选中书源哦</string>
    <string name="all">全部</string>
    <string name="replace_rule_title">替换净化</string>
    <string name="replace_rule_edit">替换规则编辑</string>
    <string name="replace_rule">替换规则</string>
    <string name="replace_to">替换为</string>
    <string name="img_cover">封面</string>
    <string name="book">书</string>
    <string name="volume_open_page">音量键翻页</string>
    <string name="click_open_page">点击翻页</string>
    <string name="click_all_next_page">点击总是翻下一页</string>
    <string name="open_page_anim">翻页动画</string>
    <string name="keep_light">屏幕超时</string>
    <string name="back">返回</string>
    <string name="menu">菜单</string>
    <string name="adjust">调节</string>
    <string name="scroll_bar">滚动条</string>
    <string name="clear_all_content">清除缓存会删除所有已保存章节,是否确认删除?</string>
    <string name="book_source_share_url">书源共享</string>
    <string name="replace_rule_summary">替换规则名称</string>
    <string name="select_all">全选</string>
    <string name="night_theme">夜间模式</string>
    <string name="welcome">启动页</string>
    <string name="download_start">开始下载</string>
    <string name="download_cancel">取消下载</string>
    <string name="no_download">暂无任务</string>
    <string name="import_select_book">导入选择书籍</string>
    <string name="update_search_threads_num">更新和搜索线程数,如感觉卡顿请减小线程数,量力而行</string>
    <string name="change_icon">切换图标</string>
    <string name="remove_from_bookshelf">删除书籍</string>
    <string name="start_read">开始阅读</string>
    <string name="data_loading">加载数据中…</string>
    <string name="load_error_retry">加载失败,点击重试</string>
    <string name="book_intro">内容简介</string>
    <string name="open_from_other">打开外部书籍</string>
    <string name="origin">来源</string>
    <string name="import_replace_rule">本机导入</string>
    <string name="import_replace_rule_on_line">网络导入</string>
    <string name="bookshelf_px">书架排序</string>
    <string name="check_update_interval">检查更新间隔</string>
    <string name="bookshelf_px_0">按阅读时间排序</string>
    <string name="bookshelf_px_1">按更新时间排序</string>
    <string name="bookshelf_px_2">手动排序</string>
    <string name="read_type">阅读方式</string>
    <string name="del_select">删除所选</string>
    <string name="del_msg">是否确认删除?</string>
    <string name="clear_font">默认字体</string>
    <string name="find_on_www">发现</string>
    <string name="find_source_manage">发现管理</string>
    <string name="find_empty">没有内容,去书源里自定义吧!</string>
    <string name="del_all">删除所有</string>
    <string name="searchHistory">搜索历史</string>
    <string name="read_history">阅读记录</string>
    <string name="clear">清除</string>
    <string name="showTitle">正文显示标题</string>
    <string name="refresh_default">书源同步</string>
    <string name="no_last_chapter">无最新章节信息</string>
    <string name="showTimeBattery">显示时间和电量</string>
    <string name="select_text">长按选择文本</string>
    <string name="showLine">显示分隔线</string>
    <string name="darkStatusIcon">深色状态栏图标</string>
    <string name="content">内容</string>
    <string name="copy_text">拷贝内容</string>
    <string name="download_all">一键缓存</string>
    <string name="content_sl">这是一段测试文字\n\u3000\u3000只是让你看看效果的</string>
    <string name="text_bg_style">文字颜色和背景(长按自定义)</string>
    <string name="immersion_status_bar">沉浸式状态栏</string>
    <string name="check_select_source">校验所选</string>
    <string name="delete">删除</string>
    <string name="add_to_shelf">加入书架</string>
    <string name="import_by_qr_code">二维码导入</string>
    <string name="join_qq_group">加入QQ群</string>
    <string name="pay_ali">支付宝收款,点击跳转支付宝</string>
    <string name="pay_qq">QQ赞赏码</string>
    <string name="pay_weixin">微信赞赏码</string>
    <string name="wifi_share">wifi分享</string>
    <string name="audio">音频</string>
    <string name="is_enable">启用</string>
    <string name="edit_find">编辑发现</string>
    <string name="feed_back">反馈</string>
    <string name="about_donate">我们利用有限的业余时间设计了异书房App,虽然它并不那么美好,但仍在努力前行。\n如果你喜欢这款软件,可以通过捐赠来支持我们。\n你也可以关注异书房微信公众号:异书房,获取书源及app更新信息。</string>
</resources>