<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_test_source"
        android:icon="@drawable/icon_debug"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_save_source"
        android:icon="@drawable/icon_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_source_copy"
        android:icon="@drawable/icon_search"
        android:orderInCategory="100"
        android:title="@string/copy_source" />
    <item
        android:id="@+id/item_source_copy_no_find"
        android:icon="@drawable/icon_search"
        android:orderInCategory="100"
        android:title="@string/copy_source_no_find" />

    <item
        android:id="@+id/item_to_source_rule"
        android:icon="@drawable/icon_search"
        android:orderInCategory="100"
        android:title="@string/source_rule_s" />

</menu>