<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_common_toolbar" />

    <include layout="@layout/layout_common_tablayout" />

    <include layout="@layout/layout_common_viewpager" />

    <include
        layout="@layout/item_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/view_add_book_shelf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_to_shelf" />

        <TextView
            android:id="@+id/view_delete_file"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete" />

        <TextView
            android:id="@+id/view_select_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_all" />

    </LinearLayout>
</LinearLayout>
