<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_common_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_space_large"
        android:paddingRight="@dimen/common_space_large">

        <CheckBox
            android:id="@+id/cb_source_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_enable" />

        <CheckBox
            android:id="@+id/cb_source_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:visibility="gone" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/cb_source_edit_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_space_small"
            android:text="@string/edit_find"
            android:textSize="@dimen/txt_size_12"
            app:qmui_radius="2dp" />
    </LinearLayout>

    <include
        layout="@layout/layout_easy_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.liuzhenli.reader.view.KeyboardTopView
        android:id="@+id/keyboard_top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>