<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/mIvCover"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/img_cover"
        android:scaleType="centerCrop"
        android:transitionName="img_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <FrameLayout
        android:id="@+id/fl_has_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_name">

        <com.liuzhenli.reader.view.BadgeView
            android:id="@+id/bv_unread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:includeFontPadding="false"
            tools:ignore="RtlHardcoded" />

        <com.liuzhenli.reader.view.RotateLoading
            android:id="@+id/rl_loading"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="right"
            android:visibility="invisible"
            app:loading_color="@color/colorAccent"
            app:loading_width="2dp"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/book_name"
        android:textColor="@color/text_color_33"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/mIvCover"
        app:layout_constraintRight_toLeftOf="@id/fl_has_new"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/mTvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingEnd="6dp"
        android:text="@string/author"
        android:textColor="@color/text_color_99"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/mTvRead"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        app:layout_constraintRight_toLeftOf="@+id/fl_has_new"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:tint="@color/tv_text_secondary"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/mTvRead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/read_dur_progress"
        android:textColor="@color/text_color_99"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/tv_last"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        app:layout_constraintRight_toLeftOf="@id/fl_has_new"
        app:layout_constraintTop_toBottomOf="@+id/mTvAuthor" />


    <TextView

        android:id="@+id/tv_last"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:singleLine="true"
        android:text="@string/book_search_last"
        android:textColor="@color/text_color_99"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        app:layout_constraintRight_toLeftOf="@id/fl_has_new" />

    <View
        android:id="@+id/vw_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/btn_bg_press"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>