<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    tools:ignore="UnusedAttribute">

    <com.micoredu.reader.widgets.BookCover
        android:id="@+id/mIvCover"
        android:layout_width="45dp"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/img_cover"
        android:scaleType="centerCrop"
        android:transitionName="img_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <FrameLayout
        android:id="@+id/fl_has_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_name">

        <com.liuzhenli.reader.view.BadgeView
            android:id="@+id/bv_unread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@color/main"
            android:includeFontPadding="false"
            android:text="100"
            tools:ignore="RtlHardcoded" />

        <com.liuzhenli.reader.view.RotateLoading
            android:id="@+id/rl_loading"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="right"
            android:visibility="invisible"
            app:loading_color="@color/colorAccent"
            app:loading_width="2dp"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/book_name"
        android:textColor="@color/text_color_66"
        android:textSize="@dimen/txt_size_16"
        app:layout_constraintLeft_toRightOf="@+id/mIvCover"
        app:layout_constraintRight_toLeftOf="@id/fl_has_new"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry" />


    <TextView
        android:id="@+id/tv_author_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/author"
        android:textColor="@color/text_color_99"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_book_summary"
        app:layout_constraintLeft_toLeftOf="@+id/tv_book_summary"
        app:layout_constraintRight_toLeftOf="@id/fl_has_new"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_book_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingEnd="6dp"
        android:text="@string/read_summary"
        android:textColor="@color/text_color_99"
        android:textSize="@dimen/txt_size_12"
        app:layout_constraintBottom_toBottomOf="@+id/mIvCover"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        app:layout_constraintRight_toLeftOf="@id/fl_has_new"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>